# trigix

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish-helm-chart.yml  publish-npm-sdk.yml  publish-python-sdk.yml
.scratch/issues/: 0001-first-vertical-slice.md  0002-real-node-execution.md  0003-web-console-mvp.md  0004-async-execution-polling.md  0005-canvas-execution-overlay.md  0006-variable-interpolation.md  0007-retry-timeout.md  0008-webhook-trigger.md  0009-approval-gate.md  0010-condition-branching.md  0011-credential-store.md  0012-scheduled-triggers.md  0013-audit-log.md  0014-export-import.md  0015-map-node.md  0016-runs-page.md  0017-transform-node.md  0018-execution-detail-page.md  0019-cancel-execution.md  0020-delay-node.md  0021-execution-retry.md  0022-sub-workflow-node.md  0023-filter-node.md  0024-aggregate-node.md  0025-sort-node.md  0026-workflow-duplication.md  0027-assert-node.md  0028-postgresql-persistence.md
apps/web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/web/e2e/: affiliate.spec.ts  analytics.spec.ts  editor-graph.spec.ts  errors.spec.ts  login.spec.ts  pages-smoke.spec.ts  routing.spec.ts  runs-page.spec.ts  smoke.spec.ts  workflow-list.spec.ts
apps/web/src/: App.tsx  AuthContext.tsx  auth.ts  constants.ts  errorMessage.test.ts  errorMessage.ts  i18n.ts  index.css  main.tsx  routing.test.ts  routing.ts  toast.tsx  useLocale.ts  useTheme.ts  vite-env.d.ts
charts/aiworkflow/: Chart.yaml  values.yaml
charts/aiworkflow/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  executor-deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  postgresql-secret.yaml  postgresql-statefulset.yaml  redis-statefulset.yaml  secret.yaml  service.yaml
charts/trigix/: Chart.yaml  values.yaml
charts/trigix/templates/: NOTES.txt  _helpers.tpl  ai-runtime-deployment.yaml  configmap.yaml  deployment.yaml  executor-deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  postgresql-secret.yaml  postgresql-statefulset.yaml  redis-statefulset.yaml  secret.yaml  service.yaml
crates/execution-core/: Cargo.toml
crates/execution-core/src/: lib.rs
crates/workflow-core/: Cargo.toml
crates/workflow-core/src/: graph.rs  lib.rs
docs/: demo-feedback-triage.md
docs/adr/: 0001-layered-platform-architecture.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: ai-agent-workflow-platform-design.md  workflow-graph-json.md
docs/dev/: bootstrap.md  ports.md
infra/docker/: entrypoint.sh
infra/nginx/: default.conf
infra/postgres/migrations/: 0001_initial_schema.sql  0002_dev_seed.sql  0003_af_stores.sql  0004_af_dev_seed.sql  0005_workflow_tags_description.sql  0006_execution_label.sql  0007_af_credentials_env_audit.sql  0008_af_webhooks.sql  0009_af_schedules.sql  0010_af_execution_output.sql  0011_af_execution_callback.sql  (+56 more)
scripts/: README.md  demo_feedback_triage.py  dev-verify.sh
sdk/: RELEASING.md
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: greeter.py  useful_nodes.py
sdk/python/tests/: test_sdk.py  test_useful_nodes.py
sdk/python/trigix_node_sdk/: __init__.py
sdk/typescript/: README.md  index.d.ts  index.js  package.json
services/ai-runtime/: Dockerfile  README.md  pyproject.toml
services/ai-runtime/app/: __init__.py  main.py
services/ai-runtime/app/agent/: README.md  __init__.py  loop.py  tools.py
services/ai-runtime/app/rag/: README.md  __init__.py  chunking.py  embeddings.py  rerank.py  router.py  store.py
services/ai-runtime/tests/: test_agent_loop.py  test_agent_tools.py  test_chunking.py  test_embeddings.py  test_openai_compat.py  test_rag_integration.py  test_rerank.py  test_store_fts.py
services/executor/: Cargo.toml  README.md
services/executor/src/: approval.rs  executor.rs  executor_late.rs  http.rs  lib.rs  main.rs  runtime.rs  scheduler.rs
services/executor/src/executor/: dispatch_tests.rs  late.rs  late2.rs  late3.rs  nodes_ai.rs  nodes_ai_blocks.rs  nodes_ai_ext.rs  nodes_aws.rs  nodes_binary.rs  nodes_china.rs  nodes_cn_llm.rs  nodes_core.rs  nodes_custom.rs  nodes_data_ext.rs  nodes_db_queue.rs  nodes_ftp.rs  nodes_integrations.rs  nodes_mail.rs  nodes_messaging.rs  nodes_messaging_ext.rs  nodes_saas_commerce.rs  nodes_saas_crm.rs  nodes_saas_marketing.rs  nodes_saas_misc.rs  nodes_ssh.rs  nodes_storage.rs  nodes_storage_ext.rs  nodes_stream.rs  nodes_tools.rs  nodes_transform.rs  nodes_vector.rs  nodes_warehouse.rs
services/executor/src/nodes/: helpers.rs
services/platform-rs/: Cargo.toml  README.md
services/platform-rs/src/: affiliate.rs  api_keys.rs  attribution.rs  audit.rs  auth.rs  billing.rs  cache.rs  captcha.rs  comments.rs  credentials.rs  crypto.rs  custom_nodes.rs  disposable_email.rs  email.rs  email_verification.rs  env_vars.rs  event_subscriptions.rs  execution.rs  execution_bus.rs  form.rs  http.rs  http_tests.rs  invitations.rs  lib.rs  main.rs  notification_prefs.rs  notifications.rs  openapi.rs  orgs.rs  password_reset.rs  posthog.rs  retention.rs  scheduler.rs  sso.rs  sso_oauth.rs  stripe_billing.rs  test_cases.rs  token_usage.rs  users.rs  variables.rs  (+3 more)
services/platform-rs/src/http/: admin.rs  affiliate.rs  analytics.rs  auth.rs  billing.rs  credentials.rs  custom_nodes.rs  event_subscriptions.rs  executions.rs  forms.rs  mod.rs  orgs.rs  rag.rs  sso.rs  system.rs  webhooks.rs  workflow_ai.rs  workflow_comments.rs  workflow_forms.rs  workflow_test_cases.rs  workflow_variables.rs  workflows.rs  workspaces.rs
services/platform-rs/tests/: postgres_integration.rs
templates/capability/: manifest.yaml
website/: index.html  robots.txt  sitemap.xml
(+90 files in other folders)
