[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trigix-node-sdk"
version = "0.1.0"
description = "Write and serve custom Trigix workflow nodes over HTTP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "北京祺智科技有限公司", email = "managecode@gmail.com" }]
keywords = ["trigix", "workflow", "automation", "nodes", "sdk", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/bj-qizhi/trigix"
Repository = "https://github.com/bj-qizhi/trigix"
Documentation = "https://github.com/bj-qizhi/trigix/tree/master/sdk/python"

[tool.setuptools]
packages = ["trigix_node_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
