[package]
name = "agentflow-executor"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
execution-core = { path = "../../crates/execution-core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rhai = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
workflow-core = { path = "../../crates/workflow-core" }

[dev-dependencies]
tower = "0.5"
