[package]
name = "agentflow-platform"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
agentflow-executor = { path = "../executor" }
execution-core = { path = "../../crates/execution-core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
uuid = { version = "1", features = ["v4"] }
workflow-core = { path = "../../crates/workflow-core" }

[dev-dependencies]
tower = "0.5"
